--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,54 @@
-/* You can add global styles to this file, and also import other style files */
+@media only screen and (max-width : 992px) {
+	header, main, footer {
+		padding-left: 0;
+	}
+}
+@media only screen and (min-width : 992px) {
+	header, main, footer {
+		padding-left: 240px;
+	}
+
+	#sidebar{
+		top: 64px;
+		bottom: 0px;
+		height: auto;
+	}
+	.modal-content{
+		overflow: hidden;
+	}
+}
+table.condensed td,
+tr.condensed td{
+	padding: 8px 5px;
+}
+.title-padding{
+	padding-left: 10px !important;
+}
+
+.progress.char-alignment{
+	background-color: #BC1F15;
+	height: 8px;
+}
+.progress.char-alignment>div{
+	background-color: #00B80E;
+}
+
+
+a{
+	/* Links with Angular have no href property */
+	cursor: pointer;
+}
+
+
+.admin-browse-account{
+	background-color: #FDD;
+
+	padding: 0 15px;
+}
+.admin-browse-account input{
+	background-color: #FFF;
+	border-bottom: none;
+	margin-bottom: 0;
+
+	text-align: center;
+}
