--- a/src/app/pages/account.component.html
+++ b/src/app/pages/account.component.html
@@ -37,14 +37,18 @@
 	<thead>
 		<tr>
 			<th class="tooltipped" data-tooltip="Nom de l'application utilisant le token">Nom</th>
-			<th class="tooltipped" data-tooltip="Les tokens privilégiés permettent de modifier l'accès au compte">Type</th>
+			<th class="tooltipped" data-tooltip="Les tokens 'admin' donnent un accès total au compte">Type</th>
 			<th>Dernière utilisation</th>
 			<th>Actions</th>
 		</tr>
 	</thead>
 	<tbody>
 		<tr *ngFor="let token of tokenList">
-			<td>{{token}}</td><td></td><td></td><td><a class="btn-floating blue" (click)="removeToken(token)"><i class="material-icons">delete_forever</i></a></td>
+			<td class="flow-text">{{token.name}}</td>
+			<td *ngIf="token.type === 'admin'"><div class="chip red lighten-4"><i class="logo material-icons">build</i>Admin</div></td>
+			<td *ngIf="token.type === 'restricted'"><div class="chip"><i class="material-icons">build</i>Limité</div></td>
+			<td>{{token.lastUsed}}</td>
+			<td><a class="btn-floating blue" (click)="removeToken(token)"><i class="material-icons">delete_forever</i></a></td>
 		</tr>
 
 	</tbody>
