--- a/src/app/pages/char-details.component.scss
+++ b/src/app/pages/char-details.component.scss
@@ -25,8 +25,12 @@
 
 #details-dungeons {
 	table tr td:not(:first-child) {
-		font-size: 24px;
+		font-size: 32px;
 		text-align: center;
 		padding: 0px 5px 0 5px;
+	}
+
+	table thead td {
+		width: 100%;
 	}
 }
