--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,30 +32,33 @@
   <li class="admin-browse-account" *ngIf="user.isAdmin">
     <input type="text" [(ngModel)]="accountToBrowse" (keyup.enter)="onAccountToBrowseSet()">
   </li>
-  <li *ngIf="user.account !== ''">
+  <li *ngIf="user.account !== ''" routerLinkActive="active">
     <a routerLink="/{{accountToBrowse}}/account/" (click)="closeSideNav()" class="activable">
       <i class="material-icons left">settings</i>
       Mon compte
     </a>
   </li>
 
-  <li *ngIf="user.account !== ''">
-    <a routerLink="/{{accountToBrowse}}/vault/" (click)="closeSideNav()" class="activable">
-      <i class="material-icons left">face</i>
-      Personnages
-    </a>
-    <ul>
-      <li class="char-link" *ngFor="let character of charList">
-        <a routerLink="/{{accountToBrowse}}/vault/{{character.bicFileName}}" (click)="closeSideNav()" class="activable">
-          <div class="title">{{character.name}} <i *ngIf="character.metadata.isPublic" class="material-icons">public</i></div>
-          <div class="subtitle">{{character.metadata.subTitle}}</div>
-        </a>
+  <li *ngIf="user.account !== ''" routerLinkActive="active">
+    <ul class="collapsible collapsible-accordion">
+      <li>
+        <a routerLink="/{{accountToBrowse}}/vault/" (click)="closeSideNav()" class="activable">Personnages</a>
+        <i class="collapsible-header material-icons">arrow_drop_down</i>
+        <div class="collapsible-body">
+          <ul>
+            <li class="char-link" *ngFor="let character of charList" routerLinkActive="grey-active">
+              <a [routerLink]="['/', accountToBrowse, 'vault', character.bicFileName]" (click)="closeSideNav()" class="activable">
+                <div class="title">{{character.name}} <i *ngIf="character.metadata.isPublic" class="material-icons">public</i></div>
+                <div class="subtitle">{{character.metadata.subTitle}}</div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </li>
     </ul>
-
   </li>
   <li *ngIf="user.account !== ''"><div class="divider"></div></li>
-  <li *ngIf="user.account === ''">
+  <li *ngIf="user.account === ''" routerLinkActive="active">
     <a routerLink="/newaccount" (click)="closeSideNav()" class="activable">
       <i class="material-icons left">add_circle_outline</i>
       Nouveau compte
