Truncate char subtitle in left menu

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,7 +49,7 @@
             <li class="char-link" *ngFor="let character of charList" routerLinkActive="grey-active">
               <a [routerLink]="['/', accountToBrowse, 'vault', character.bicFileName]" (click)="closeSideNav()" class="activable">
                 <div class="title">{{character.name}} <i *ngIf="character.metadata.isPublic" class="material-icons">public</i></div>
-                <div class="subtitle">{{character.metadata.subTitle}}</div>
+                <div class="subtitle truncate">{{character.metadata.subTitle}}</div>
               </a>
             </li>
           </ul>
