Class icons & subtitle in char list

--- a/src/app/pages/char-list.component.html
+++ b/src/app/pages/char-list.component.html
@@ -18,7 +18,16 @@
 				<td>
 					<span *ngIf="character.metadata?.isPublic === true" class="tooltipped" materialize="tooltip" data-position="right" data-tooltip="Personnage public"><i class="material-icons left">public</i></span>
 				</td>
-				<td class="flow-text"><a (click)="gotoCharDetails(character, false)">{{character.name}}</a></td>
+				<td>
+					<a class="flow-text" (click)="gotoCharDetails(character, false)">{{character.name}}</a>
+					<span style="margin-left: 1em;">
+						<ng-container *ngFor="let cl of character.classes">
+							<img style="height: 75%; vertical-align: middle;" src="/assets/nwn2/icons/{{cl.icon}}.png" title="{{cl.name}}"/>
+						</ng-container>
+					</span>
+					<br/>
+					<em>{{character.metadata.subTitle}}</em>
+				</td>
 				<td>{{character.race}}</td>
 				<td>{{character.lvl}}</td>
 				<td>
@@ -48,7 +57,16 @@
 				<td>
 					<span *ngIf="character.metadata?.isPublic === true" class="tooltipped" materialize="tooltip" data-position="right" data-tooltip="Personnage public"><i class="material-icons left">public</i></span>
 				</td>
-				<td class="flow-text"><a (click)="gotoCharDetails(character, true)">{{character.name}}</a></td>
+				<td>
+					<a class="flow-text" (click)="gotoCharDetails(character, true)">{{character.name}}</a>
+					<span style="margin-left: 1em;">
+						<ng-container *ngFor="let cl of character.classes">
+							<img style="height: 75%; vertical-align: middle;" src="/assets/nwn2/icons/{{cl.icon}}.png" title="{{cl.name}}"/>
+						</ng-container>
+					</span>
+					<br/>
+					<em>{{character.metadata.subTitle}}</em>
+				</td>
 				<td>{{character.race}}</td>
 				<td>{{character.lvl}}</td>
 				<td>
