--- a/src/app/pages/account.component.html
+++ b/src/app/pages/account.component.html
@@ -36,8 +36,8 @@
 <table id="account-tokens" class="highlight">
 	<thead>
 		<tr>
-			<th class="tooltipped" data-tooltip="Nom de l'application utilisant le token">Nom</th>
-			<th class="tooltipped" data-tooltip="Les tokens 'admin' donnent un accès total au compte">Type</th>
+			<th class="tooltipped" materialize="tooltip" data-tooltip="Nom de l'application utilisant le token">Nom</th>
+			<th class="tooltipped" materialize="tooltip" data-tooltip="Les tokens 'admin' donnent un accès total au compte">Type</th>
 			<th>Dernière utilisation</th>
 			<th>Actions</th>
 		</tr>
@@ -48,7 +48,7 @@
 			<td *ngIf="token.type === 'admin'"><div class="chip red lighten-4"><i class="logo material-icons">build</i>Admin</div></td>
 			<td *ngIf="token.type === 'restricted'"><div class="chip"><i class="material-icons">build</i>Limité</div></td>
 			<td>{{token.lastUsed}}</td>
-			<td [ngClass]="{tooltipped: appComponent.user.token?.id === token.id}"
+			<td materialize="tooltip" [ngClass]="{tooltipped: appComponent.user.token?.id === token.id}"
 				(onCreate)="appComponent.user.token?.id === token.id ? $('#account-tokens tbody td.tooltipped').tooltip() : null"
 				data-tooltip="Ce token est actuellement utilisé, vous pouvez le supprimer en vous déconnectant" data-position="top">
 				<a class="btn-floating blue" (click)="removeToken(token)"
