Added wiki link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,6 +70,12 @@
       Forum
     </a>
   </li>
+  <li>
+    <a href="https://wiki.lcda-nwn2.fr/" (click)="closeSideNav()" class="activable">
+      <i class="material-icons left">local_library</i>
+      Wiki
+    </a>
+  </li>
 </ul>
 
 <!-- PAGE CONTENT -->
